--- a/TIL/2022_08_31.md
+++ b/TIL/2022_08_31.md
@@ -20,7 +20,7 @@ HTML문서의 정보를 설정
 
 ----
 
-## 시맨틱 태그이란?
+## 시맨틱 태그란?
 시맨틱(Sematic)은 "의미의"이란 뜻으로 시맨틱 태그는 의미를 갖고있는 태그를 뜻한다.  
 > 시맨틱 태그를 사용 하는 이유는 `검색 엔진 최적화(SEO)`, `스크린리더`, `의미가 없는 div태그로 문서를 작성하는것 보다 개발자와 컴퓨터 입장에서 구조를 한눈에 파악하기 좋다`.
 
