--- a/TIL/2022_08_31.md
+++ b/TIL/2022_08_31.md
@@ -6,15 +6,15 @@
 문서의 유형을 정의하기 위해 사용하는 선언문(DTD / Document Type Definition)  
 > 선언하는 이유 : HTML 버전 마다 적용되는 태그가 다르다. 옛날버전 HTML 태그를 사용할 시 오류를 발생시킬수있다. 그렇기에 버전을 선언해 버전에 맞는 태그를 사용 할 수 있도록 도와준다.
 
-`<html>`  
+### `<html>`  
 HTML문서의 최상단 요소  
 언어를 설정하여 검색엔진과 스크린 리더의 작동에 영향을 미침
 
-`<head>`  
+### `<head>`  
 문서에 적용되는 메타데이터의 집합
 HTML문서의 정보를 설정
 
-`<title>`  
+### `<title>`  
 문서의 제목  
 브라우저의 제목 표시줄 or 페이지 탭에 표시 되는 문서 제목
 
@@ -32,48 +32,96 @@ HTML문서의 정보를 설정
 </figure>
 
 
-`<body>`  
+### `<body>`  
 사용자에게 보여지는 HTML문서의 내용을 나타내는 요소
 
-`<article>`
+### `<article>`
 독립적으로 구분되거나 재사용 가능한 구획, 따로 놓아도 이상하지 않은 영역
 
-`<section>`  
+### `<section>`  
 연관성 있는 컨텐츠
 
-> `article` 과 `section`요소는 `헤딩요소(h1~h6)`와 함께 쓰는걸 권장  
+> <strong>article</strong> 과 <strong>section</strong>요소는 `헤딩요소(h1~h6)`와 함께 쓰는걸 권장  
 
 
 `<header>`
 특정한 컨텐츠의 시작부분을 나타내는 요소
 
-`<h1> ~ <h6>`  
+### `<h1> ~ <h6>`  
 문서의 제목 or 구분된 영역의 제목 설정  
 크기에 따라서 중요도를 다르게 설정 가능(그저 굵기를 위해서 사용하지 않는다.)  
 `<h1>`태그는 페이지 마다 한번만 이용한다.
 HTML 구조상 h1 ~ h6는 순서대로 이용해야한다.(h1 다음에 h4 이런식으로 사용하면 안된다.)
 
-`<nav>`  
+### `<nav>`  
 다른 페이지 링크를 제공해주는 영역을 설정  
 눌렀을때 다른페이지로 이동하는 경우에 사용하고 페이지는 그대로 유지되며 기능적인 동작만 실행하는 영역에서 사용 되지 않는다.
 
-`<aside>`  
+### `<aside>`  
 문서 별도의 콘텐츠 영역을 설정  
 참조 보충설명 광고영역, 양쪽 사이드에 위치 해야하는 경우
 
 
-`<footer>`  
+### `<footer>`  
 작성자, 저작권 의 정보, 관련된 링크등의 내용을 담는 구획 요소
 
-`<address>`   
+### `<address>`   
 연락처 정보를 제공
 
-`<main>`  
-페이지를 대표하는 태그
-
-`<div>`  
-의미가 없는 태그  
-검색 엔진 카테고리 구분을 하지 못한다.
-여러 요소들을 묶어서 스타일을 꾸밀때 사용한다.
+### `<main>`  
+페이지를 대표하는 태그  
+주요 컨텐츠 영역
+### `<div>`  
+아무 의미 없이 영역을 설정
+검색 엔진 카테고리 구분을 하지 못한다.  
+여러 요소들을 묶어서 스타일을 꾸밀때 사용한다.    
 여러 태그를 대신해서 `<div>`를 사용 할 수 있지만 최대한 적합한 요소를 찾아보고 없으면 사용하자.
 
+`<ol>` `<ul>` `<li>`
+
+`<ol>` oreder list 약자 순서가 있는 리스트
+`<ul>` unorder list 약자 순서가 없는 리스트
+`<li>` 리스트의 항목(item)
+
+> `ul` , `ol` 직계자식으로는 `li`만 올수있다.     
+> `li`반드시 `ul` , `ol` 안에 들어가야한다.  
+> 세개 이상일때 목록으로 묶어서 표현하는게 좋다.  
+
+`<dl>` `<dt>` `<dd>`  
+목록을 정의할 때 사용  
+`<dl>` Description List  
+`<dt>` Definition Term  
+`<dd>` Definition Details
+
+- 키(key)-값(value) 형태를 표현할 때 유용
+
+### `<figure>`  `<figcaption>`
+`<figcation>`은 `<figure>`과 함께 사용해야한다.  
+주로 사진과 사진정보를 보여줄때 사용한다.
+> 따로 텍스트로 입력 할 시 별개로 인식 할 수 있기 때문에 `figure/figcation` 태그를 이용하자. 
+
+### `<p>`
+하나의 완결된 문단
+줄바꿈을 위해서 사용 금지
+
+### `<pre>`
+작성한 내용 그대로 화면에 표시된다.
+
+### `<blockquote>` `<q>`
+인용 블록  
+`<q>` 한줄 인용구
+> `<cite>` 출처를 뜻한다.
+
+### `<hr>`
+가로줄  
+장면 전환 혹은 문잔 안에서 주제가 변경되었을때 분리 역할
+
+
+### `Entity`
+HTML에서 예약어로 사용되고 있는 문자들을 대체하기 위헤서 사용
+- `&` : `&amp;`
+- `<` : `&lt;`
+- `>` : `&gt`
+- `"` : `&quot;`
+
+> [더 많은 Entity를 알고 싶다면 Entity reference](https://html.spec.whatwg.org/multipage/named-characters.html#named-character-references)
