--- a/TIL/2022_09_02(CSS특강).md
+++ b/TIL/2022_09_02(CSS특강).md
@@ -11,7 +11,25 @@
 
 🔆 100%는 그냥 가져오기 / auto는 여러가지를 고려해서 가져오기
 
-🔆 사용자 에이전트 스타일시트 - 기본적으로 설정 되어있기 때문에 확인해야한다.
+🔆 사용자 에이전트 스타일시트 (user agent stylesheet)- 브라우저가 제공하는 기본 스타일, 기본적으로 설정 되어있기 때문에 확인해야한다.
 
 🔆 `width: auto` 는 부모기준  
 🔆 `height: auto`는 자식 기준 컨텐츠 값 만큼
+
+🔆 프로퍼티마다 initial value가 모두 다르다!!
+
+🔆 div요소를 만들었을때 왜 왼쪽에 생성 되는가?
+- 우리의 문화가 왼쪽에서 읽는 문화여서 그렇다.
+- 아랍 같은 경우에는 오른쪽부터 읽는다.
+
+🔆 기본적인 위치는 `css direction` 을 통해 알수있다.
+
+```
+box-sizing: content(initial value)
+box-sizing: border-box
+```
+
+🔆 블록 요소란?
+- 한줄을 모두 차지한다.
+- 부모가 제공해주는 컨텐츠 영역만큼 차지한다.
+- 남는 공간은 사용 가능 공간!!
