css특강 정리 완료

--- a/TIL/2022_09_02(CSS특강).md
+++ b/TIL/2022_09_02(CSS특강).md
@@ -33,3 +33,104 @@ box-sizing: border-box
 - 한줄을 모두 차지한다.
 - 부모가 제공해주는 컨텐츠 영역만큼 차지한다.
 - 남는 공간은 사용 가능 공간!!
+
+
+## margin
+🔆 margin: 0 (initial value)  
+🔆 `margin: 0 atuo` 상하를 못하는 이유는 밑에 다음 컨텐츠 공간이기 때문이다.  
+상하 auto는 가능 하지만 값이 0이다.
+
+## Header - Contents - Footer
+🔆 경험이 적을수록 마크업을 천천히 순차적으로...  
+🔆 먼저 어떻게 크기를 차지하는지 확인해야한다.  
+🔆 다양한 관점이 존재한다.  
+
+---
+🔆 div를 구분하기 위해서 class를 넣어준다.
+- 클래스 이름은 숫자가 처음에 나오면 안된다.
+- 명확하게 지어야한다.
+
+🔆 전체 선택자(universal selector)는 생략되어있다. 
+
+
+🔆 감싸는 div - wrapper/ containner  
+🔆 나중에 클래스명 짓는게 고통이다.  
+🔆 작업순서가 체계적으로 해야 작업이 수월하다.
+
+
+🔆 사용자 유저 스타일 리셋
+ - initial 이랑 전혀 상관없다!!
+ - 우리가 의도한 디자인이 아니기 때문에 버려야한다.
+ - 초기화 해주는 것이 안정적이다.
+ ```css
+ h1, p {
+    margin: initial;
+ }
+ ```
+
+ 🔆 가운데 정렬 방법
+ - margin auto 블럭요소 가운데 정렬
+ - text-align 안에 있는 인라인들이 가운데 정렬
+
+ 🔆 인라인 요소는 부모의 영향을 받는다.  
+ 🔆 인라인 요소는 baseline이 존재  
+ 🔆 h1은 블럭 요소이지만 text는 인라인 요소이다.  
+ 🔆 h1은 텍스트를 감싸고 있는 cotainer라고 생각하자  
+ 🔆 text-align은 인라인 요소에 주는것이 아니라 상위요소 블럭 요소에 주는것이다. 하위에 모든 인라인 요소들이 반응한다.
+
+ 🔆 모든것이 상속 되는것이 아니다.
+  - 상속되지 않는 속성도 존재한다.
+  - color, 폰트 사이즈 등 상속이 가능하다.
+  - width, background-color는 상속이 안된다.
+  - 프로퍼티가 그대로 넘어 온다는 개념
+
+  >Q) margin을 따로 준적이 없는데, margin: initial을 하지 않으면 p랑 contents부분 사이에 빈 공간이 생기는 이유는 ?   
+  A) 마진 병합 현상
+
+  >Q) width는 상속이 안되는데 부모에 width를 설정하면 자식요소도 동일하게 적용 되는데 상속이 아닌가요?  
+  A) 상속이 아니다. auto이기 때문에 부모의 속성에 따라 조정된 것 
+
+
+🔆 타입 셀렉터로 변경이 모든 태그가 변경한다.  
+
+🔆 `.header img` - 헤더 하위에 있는 모든 img (한칸 띄기)
+- 꺽새 > 직계자식 선택자
+- 띄어쓰기, 꺽새등 사이에 들어가는것 combinator 결합자
+
+🔆 p요소는 블럭 레벨 width값이 지정이 안되면 auto가 되어 있어서 직계 부모만큼 컨텐츠가 가득차는 것
+- 텍스트가 많아지면 줄바꿈이 생긴다. p요소에 컨텐츠 양만큼 width가 잡히면 좋겠다면 `width: fit-content` 
+
+🔆 id를 쓰지 않는 이유 : class - 똑같은 별칭이 다른곳에 들어 갈수있다.
+
+🔆 `margin` or `padding`은 한방향으로 주는것이 편하다.
+
+>Q) h1 에 기본 폰트사이즈를 지정해 주는 것이 올바른 초기화라고 할 수 없는 이유를 다시 한 번 들을 수 있을까요?  
+A) h1에 기본 폰트사이즈를 지정해버리면 원래부터 상속이 잘되는 font-size가 더이상 상속되지 않게 됩니다. h1이 이미 고정 font-size를 가지고 있으니까요.  
+그래서 원래부터 지원되는 font-size의 상속 기능을 h1 전부에게 다시 활성화 시켰다 보시면 됩니당.  
+물론 h1 { font-size: 24px; } 이런식으로 초기화 자체를 내가 원하는 font-size로 하는 경우도 실무적으로 매우 흔합니다
+
+>Q) 헷갈리는게 text-align은 block요소에서 작성을 해야지 그 내부에 inline요소들에게 적용이 된다고 하셨는데 그러면 inline요소는 text-align을 상속받는건가요? 만약 상속을 받는다면 inline요소는 직접 text-align속성을 작성하는 것은 안되고 무조건 block요소에게 상속을 받아야지만 적용이되는건가요  
+A) inline요소는 부모요소의 text-align속성에 영향을 받는것이지 상속과 관계없습니다.  
+상속은 오로지 부모의 특정 프로퍼티,값이 하위 요소에게로 전파될때만 이야기 합니다.
+
+🔆 a요소는 인라인요소
+- 인라인 요소는 텍스트 크기만큼 크기가 잡힌다.
+
+🔆 마크업 개행
+- html은 디자인을 위해서 만들어진것이 아니다.
+- 개행을 통해 사이가 벌어진다.
+- 태그를 붙혀쓰면 벌어진 개행도 사라진다.
+
+🔆 인라인은 width, height 개념이 존재하지 않는다.
+- line height가 존재한다.
+- margin을 주었을때 양옆으로 변화 / 상하로는 이동이 없다.
+- 전깃줄에 참새를 생각해보면 된다. 양옆으로 이동은 가능하지만 상하로는 이동할수 없다.
+
+
+🔆 display 속성
+- 인라인 요소를 블록화, 블록 요소를 인라인요소로 변경가능
+- inline-block : 인라인 세사엥 놓인 블록
+
+🔆 id는 체계적으로 관리가 어렵다.
+
+🔆 selector specificity(금, 은, 동)
