9월6일 공부내용 정리

--- a/TIL/2022_09_06.MD
+++ b/TIL/2022_09_06.MD
@@ -1,2 +1,126 @@
-# TIL 9월 2일
+# TIL 9월 6일
 
+## Text-Level semantic
+
+- Sectioning Content
+한줄을 모두 차지한다.
+가용 가능범위 = 부모의 컨텐츠 영역 만큼 차지한다.
+
+- Text-Level
+요소안의 컨텐츠 크기만큼 영역을 차지한다.
+자식으로 `section grouping 컨텐츠`를 포함 할 수 없다.
+
+- `<br>` `<wbr>`
+`<br>`태그는 줄바꿈  
+`<wbr>`태그는 텍스트박스 안에서 한줄로 모두 표시가 안될때에만 줄바꿈
+
+> `<wbr>`태그가 없는 공간에서 줄바꿈이 생긴다면 브라우저 속성에 의한 것이다.
+
+- `white-space` attribute를 통해 줄바꿈 설정 가능
+
+- 공백을 기준으로 문자인지 단어인지 구분한다.
+
+- 주석 : 설명, 협업을위해서 작성해주어야한다.
+
+> HyperText란?
+> 다른문서와 쉽게 연결이 되도록 한 '링크'의 모음으로 구성된 문서  
+> 하이퍼 링크 
+
+## `<a>`
+- anchor로 연결
+- `<a>`안에 section, grouping 태그를 사용가능하다.
+- `<a>`안에 `<a>`를 사용 할 수 없다.
+- `<a>` 요소 안에 download 속성 파일명 설정 가능 
+```html
+<a href="이동하고 싶은 주소"></a>
+<a href="#id"></a>
+```
+🔆 스크롤을 부드럽게 만들고 싶다면 ??  
+- 루트(html)태그에 속성 : scroll-behavior 
+- [MDN scroll-behavior](https://developer.mozilla.org/en-US/docs/Web/CSS/scroll-behavior)
+
+## `<b>` `<strong>`
+`<b>`는 시맨틱 의미가 없다.
+- 더이상 사용하지 않는다.(시맨틱 이전에 나왔다.)  
+
+`<strong>`
+- 굵은 글꼴에 중요도를 강조, 더욱 강조 할때는 중첩 해서 사용할수있다.
+
+🔆 heading 태그가 애매할때는 `<strong>`를 사용한다.
+
+## `<i>` `<em>`
+`<i>`
+- 기울임 글꼴 ➡️ 전문용어, 문단에서 주 언어와 다른언어로 사용되었을때
+- 강조의 의미는 없다, 다른 텍스트랑 구분  
+
+`<em>`
+- 강조의 의미
+- `<em>` 보다 `<strong>`이 강하다.
+
+
+## `<dfn>`
+정의하고 있는 용어
+
+## `<abbr>`
+준말, 약자    
+`<dfn>`로 감싸 주기도 한다.
+
+ 
+## `<sup>` `<sub>`  
+`<sup>` 위첨자  
+`<sub>` 아래첨자  
+
+## `span`
+- 의미가 딱히 없다.
+- 묶는 용도로 사용핟.
+- `div`요소 처럼 최대한 마지막 방법으로 사용
+
+---
+
+## HTML/CSS 마크업
+🔆 폰트는 생각 보다 용량이 크다!!
+- 폰트를 다운 받느냐 마느냐 : 사용 빈도
+- 적으면 img가 좋은 방법
+
+🔆 `<button>검색 버튼</button>` - 텍스트는 css숨김
+ - SEO 검색 최적화를 위해서
+
+🔆 시간은 `<time>`요소 사용한다.
+
+🔆 순서가 있으면 `<ol>`
+
+🔆 테이블을 이용할때는 데이터를 기반으로 사용한다.
+
+🔆 `<address>` 안에 `<dl>` `<dl>`를 사용하면 더욱 친절하다.
+
+🔆 제목은 내용을 전체적으로 포함하고 있어야한다.
+
+🔆 `<ol>`태그는 기본적으로 오름차순으로 되어있다.
+- ol 속성 reversed
+- `<ol start=10>`
+
+🔆 `<figure>` 안에는 img가 여러개 들어갈수있다.
+
+🔆 섹션을 3개로 나누어 tab1 tab2 tab3
+
+🔆 more 버튼을 마지막에 넣은 이유는 스크린 리더를 고려해서!!
+
+--- 
+## `<img>`
+- 스크린리더 사용시
+    - alt="" 아무것도 읽지 않는다
+    - alt가 아예없으면 : 스크린리더가 파일명을 읽는다.
+
+🔆 절대경로 : 현재 위치와 관련없이 열수있는 위치  
+🔆 상대경로 : 나(현재 기준)의 기준의 위치
+
+🔆 점진적 향상기법
+
+
+## `<iframe>`
+user → 해커 - iframe → naver
+
+MITM(중간자공격)
+- 유저인증
+- 유저 접속 지역 설정
+- iframe 같은 태그 지원하지 않음
